@@ -6,6 +6,7 @@ v0.07
 	* FIX : correctly keep track of the tag table size
 	* FIX : remove 0.3 API support
 	* ADD : gzipped downloading
+	* ADD : nice painting for water
 
 v0.06 5 dec 2006 
 	* FIX : also recognize true/false for oneway tag
